--- a/style.css
+++ b/style.css
@@ -18,3 +18,9 @@
 .btn-jum {
   background-color: black !important;
 }
+
+.menu-placeholder {
+  background-color: rgb(223, 223, 223) !important;
+  border-radius: 15px 15px 0px 0px;
+  box-shadow: 0px 0px 10px #9a9a9a;
+}
